fix:(gap)

--- a/src/public/css/newHeader.css
+++ b/src/public/css/newHeader.css
@@ -671,6 +671,7 @@
         width: 100px;
         /*border: 1px green solid;*/
         margin-left: 37px;
+        gap: 20px;
         /*border: 1px red solid;*/
     }
 
@@ -763,6 +764,7 @@
     .buttons_redesign {
         width: 90px;
         /*border: 1px green solid;*/
+        gap: 20px;
         margin-left: 35px;
     }
 
@@ -830,7 +832,7 @@
 @media screen and (max-width: 393px) {
     .buttons_redesign {
         width: 110px;
-        gap: 28px;
+        gap: 20px;
         width: 50px;
         /*border: 1px green solid;*/
         margin-left: 46px;
